# xfprot-ubcd

./: .gitignore  README.md
ubcd/: README  build-for-ubcd.sh
ubcd/po/: LINGUAS  de.po  it.po  pl.po  ru.po
ubcd/root/xfprot/: xfprot.config
xfprot/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac
xfprot/icons/: Makefile.am  Makefile.in
xfprot/po/: LINGUAS  Makefile.in.in  POTFILES.in  de_DE.UTF-8.po  es_ES.UTF-8.po  fr_FR.UTF-8.po  it_IT.UTF-8.po  ja_JP.UTF-8.po  pl_PL.UTF-8.po  pt_BR.UTF-8.po  ru_RU.UTF-8.po  zh_CN.UTF-8.po  zh_TW.UTF-8.po
xfprot/src/: Makefile.am  Makefile.in  Xfprot_Scan  Xfprot_Update  about_window.c  config.h.in  dialog_window.c  file_selector.c  gunixsignal.c  gunixsignal.h  my_file_selector.c  mygtk.c  mygtk.h  mylib.c  mylib.h  text_common.c  text_edit_window.c  text_view_window.c  xfprot.1  xfprot.c  xfprot.desktop  xfprot.desktop.in  xfprot.h  xfprot_scan.desktop  xfprot_scan.desktop.in
