#
# XFPROT Copyright (C) 2002-2009 by Tito Ragusa <tito-wolit@tiscali.it>
#
# XFPROT is a graphical frontend for the F-Prot Antivirus
# for Linux Small Business Edition. It was based upon the
# XSTEP-3.5.1 library until version 0.19beta.
# Starting from version 0.20beta it is based upon Gtk-1.2.10.
# Starting from version 1.0-rc2  it can use  also  Gtk-2.2.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of
# the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
#
# Please read the COPYING and README file!!!
#
# Report bugs to <tito-wolit@tiscali.it>
SUBDIRS = po src icons
DISTCLEANFILES = .depend
EXTRA_DIST = configure

